moving on to ctci before too late

--- a/HTML_Graphics/HTML5_Canvas.html
+++ b/HTML_Graphics/HTML5_Canvas.html
@@ -136,6 +136,24 @@ ctx.fillStyle = grd;
 ctx.fillRect,(10, 10, 150, 80);
 </script>
 
+<p>Image to use:</p>
+<img id="scream" src="../images/img_the_scream.jpg" alt="The Scream" width=220" height="277">
+
+<p>Canvas to fill:</p>
+<canvas id="scream" width="250" height="300" style="border:1px solid #d3d3d3;">
+Your browser does not support the HTML5 canvas tag.</canvas>
+
+<p><button onclick="myCanvas()">Try it</button></p>
+
+<script>
+function myCanvas() {
+	var c = document.getELementbyId("scream");
+	var ctx = c.getContext("2d");
+	var img = document.getElementById("../images/scream/img_the_scream.jpg");
+	ctx.drawImage(img, 10, 10);
+}
+</script>
+
 <table width="100%">
   <tr>
     <td><a href="HTML_Input_Form_Attributes.html">HTML_Input_Form_Attributes</a></td>
