--- a/devdocs/index.html
+++ b/devdocs/index.html
@@ -3,8 +3,21 @@
   <head>
 		<meta charset="utf-8">
 		<title>My test page</title>
+		<link href="styles/style.css" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 	</head>
 	<body>
-		<img src="images/firefox-icon.png" alt="My test image">
+		<h1>Getting started with the web.</h1>
+		<img src="images/firefox-icon.png" alt="Firefox logo">
+		<p>At Mozilla, we're a global community of</p>
+		
+		<ul>
+			<li>technologists</li>
+			<li>thinkers</li>
+			<li>builders</li>
+		</ul>
+
+		<p>working together ...</p>
+		<a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a>
 	</body>
 </html>
